// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentColumn > renders correctly with content button 1`] = `
<div
  btntooltiptext="tooltip text"
  class="pa-2 d-flex justify-space-between align-center rounded content-column bg-quaternary-dark"
  contentbtnicon="testIcon"
  hascontentbtn="true"
>
  <div
    class="d-flex align-center"
  >
    <!--v-if-->
    <div>
      <div
        class="text-body-small text-secondary-text"
      >
        header
      </div>
      <div
        class="text-body-medium line-break-anywhere"
      >
        value
      </div>
    </div>
  </div>
  <v-tooltip-stub
    activatorprops="[object Object]"
    attach="false"
    closeonback="false"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="true"
    interactive="false"
    location="top"
    locationstrategy="connected"
    minwidth="0"
    modelvalue="false"
    noclickanimation="false"
    offset="10"
    openonclick="false"
    openonhover="true"
    origin="auto"
    persistent="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    text="Click to copy"
    viewportmargin="12"
    zindex="2000"
  />
</div>
`;

exports[`ContentColumn > renders correctly with content button and prepend icon 1`] = `
<div
  btntooltiptext="tooltip text"
  class="pa-2 d-flex justify-space-between align-center rounded content-column bg-quaternary-dark"
  contentbtnicon="testIcon"
  hascontentbtn="true"
>
  <div
    class="d-flex align-center"
  >
    <v-icon-stub
      class="mr-2"
      color="icon-default"
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      mdiKey
    </v-icon-stub>
    <div>
      <div
        class="text-body-small text-secondary-text"
      >
        header
      </div>
      <div
        class="text-body-medium line-break-anywhere"
      >
        value
      </div>
    </div>
  </div>
  <v-tooltip-stub
    activatorprops="[object Object]"
    attach="false"
    closeonback="false"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="true"
    interactive="false"
    location="top"
    locationstrategy="connected"
    minwidth="0"
    modelvalue="false"
    noclickanimation="false"
    offset="10"
    openonclick="false"
    openonhover="true"
    origin="auto"
    persistent="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    text="Click to copy"
    viewportmargin="12"
    zindex="2000"
  />
</div>
`;

exports[`ContentColumn > renders correctly without content button 1`] = `
<div
  btntooltiptext=""
  class="pa-2 d-flex justify-space-between align-center rounded content-column bg-quaternary-dark"
  contentbtnicon="testIcon"
  hascontentbtn="false"
>
  <div
    class="d-flex align-center"
  >
    <!--v-if-->
    <div>
      <div
        class="text-body-small text-secondary-text"
      >
        header
      </div>
      <div
        class="text-body-medium line-break-anywhere"
      >
        value
      </div>
    </div>
  </div>
  <v-tooltip-stub
    activatorprops="[object Object]"
    attach="false"
    closeonback="false"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="true"
    interactive="false"
    location="top"
    locationstrategy="connected"
    minwidth="0"
    modelvalue="false"
    noclickanimation="false"
    offset="10"
    openonclick="false"
    openonhover="true"
    origin="auto"
    persistent="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    text="Click to copy"
    viewportmargin="12"
    zindex="2000"
  />
</div>
`;
